# DailyDigestBot

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/: bot.py
src/handlers/: commands.py  common.py
src/services/: calendar_stub.py  memes.py  quotes.py  weather.py
src/telebot_starter.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_quotes.py
